--- a/templates/books/landing.html
+++ b/templates/books/landing.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block main %}
-    <h1> All BOOKS </h1>
+    <h1 class="text-info"> All BOOKS </h1>
     <table class="table">
         <tr>
             <th> TITLE</th>
@@ -25,7 +25,7 @@
     </table>
 
    <div class="mb-3">
-        <a href="{{ url_for('books.form_create') }}" class="btn btn-primary">Add New Book</a>
+        <a href="{{ url_for('books.form_create') }}" class="btn btn-outline-info">Add New Book</a>
     </div>
 
 
