--- a/templates/books/show.html
+++ b/templates/books/show.html
@@ -1,23 +1,31 @@
 {% extends './base.html' %}
 
 {% block main %}
-    <h1> Book Info </h1>
-    <div class="card" style="width: 18rem;">
-        <img src="{{book.image_url}}" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">{{book.title}}</h5>
-            <p class="card-text">Brief: {{book.description}}</p>
-            <p class="card-text">Number Of Pages: {{book.num_pages}}</p>
+    <h1 class="text-info"> Book Info </h1>
 
-            <form action="{{ book.edit_url }}" method="GET">
-                <input type="submit" value="Edit" class="btn btn-success">
-            </form>
+<div class="card text-bg-dark w-50 ">
+  <img src="{{book.image_url}}" class="card-img " alt="...">
+  <div class="card-img-overlay">
+    <h5 class="card-title fs-3 fw-bold">{{book.title}}</h5>
+    <p class="card-text fs-4"> {{book.description}}</p>
+    <p class="card-text fs-4 "><small>Number Of Pages: {{book.num_pages}}</small></p>
 
-            <form action="{{ book.delete_url }}" method="POST">
-                <input type="submit" value="Delete" class="btn btn-danger">
-            </form>
 
-            <a href="{{ url_for('books.landing') }}" class="btn btn-primary">Back to all Books</a>
-        </div>
-    </div>
+
+</div>
+<div class="btn-group" role="group" aria-label="Basic mixed styles example">
+  <button type="button" class="btn btn-success">
+      <form action="{{ book.edit_url }}" method="GET">
+                <input type="submit" value="Edit" class="btn ">
+            </form> </button>
+
+  <button type="button" class="btn btn-warning">
+      <a href="{{ url_for('books.landing') }}" class="btn ">Back to all Books</a>
+</button>
+  <button type="button" class="btn btn-danger">      <form action="{{ book.delete_url }}" method="POST">
+                <input type="submit" value="Delete" class="btn ">
+            </form></button>
+</div>
+
 {% endblock %}
+
